// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render a large icon 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-circle"
    data-component-type="icon"
    size="large"
  />
</Fragment>
`;

exports[`<Icon /> should render a non-FontAwesome icon 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon intelli-icon-avatar"
    data-component-type="icon"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render an icon with a badge 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    data-component-type="icon"
    size="xlarge"
  />
  <styled.span
    size="xlarge"
  >
    <Badge
      backgroundColor="#CADDFC"
      color="#CADDFC"
      label={6}
      size="medium"
    />
  </styled.span>
</Fragment>
`;

exports[`<Icon /> should render icon with a custom size 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    customSize={2.6}
    data-component-type="icon"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render icon with colour 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    color="#1A2B3C"
    data-component-type="icon"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render icon with no size or colour 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    data-component-type="icon"
    size="medium"
  />
</Fragment>
`;

exports[`<Icon /> should render icon with size 1`] = `
<Fragment>
  <styled.i
    aria-hidden={true}
    className="icon fa-check"
    data-component-type="icon"
    size="medium"
  />
</Fragment>
`;
